# hotloaded-plugins

./: README.md  pyproject.toml
hotloaded_plugins/: __init__.py
hotloaded_plugins/plugins/: base_plugin.py  plugin1.py  plugin2.py  plugin3.py  plugin4.py
